Finished Cart.html

--- a/cart.html
+++ b/cart.html
@@ -19,78 +19,34 @@
     <div>
         <img src="background-shop" alt="">
         <div>
-            <span>Shop</span>
+            <span>Cart</span>
             <a href="index.html">Home</a> > <span>Shop</span>
         </div>
     </div>
     <div>
-        <div>
-            <span>Showing 1-8 of 24 results</span>
-        </div>
-        <div>
-            <div>
-                <span>Show</span>
-                <Button>8</Button>
-            </div>
-            <div>
-                <span>Sort By</span>
-                <button>Relevance</button>
-            </div>
-        </div>
+        <span>Product</span>
+        <span>Price</span>
+        <span>Quantity</span>
+        <span>Subtotal</span>
     </div>
     <div>
-        <span>-30%</span>
-        <img src="syltherine" alt="syltherine">
-        <h3>Syltherine</h3>
-        <span>Stylish cafe chair</span>
-        <span>Rp 2.500.000 </span> <span>Rp 3.500.000</span>
+        <img src="Asgaard sofa 5.png" alt="">
+        <span>Asgaard sofa</span>
+        <span>Rs. 250,000.00</span>
+        <button>1</button>
+        <span>Rs. 250,000.00</span>
+        <img src="Vector" alt="">
     </div>
     <div>
-        <img src="Leviosa" alt="Leviosa">
-        <h3>Leviosa</h3>
-        <span>Stylish cafe chair</span>
-        <span>Rp 2.500.000</span>
+        <span>Cart Totals</span>
+        <span>Subtotal</span> <span>Rs. 250,000.00</span>
+        <span>Total</span> <span>Rs. 250,000.00</span>
+        <button>Check Out</button>
     </div>
-    <div>
-        <span>-50%</span>
-        <img src="lolito" alt="lolito">
-        <h3>Lolito</h3>
-        <span>Luxury big sofa</span>
-        <span>Rp 7.000.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="respira" alt="respira">
-        <h3>Respira</h3>
-        <span>Outdoor bar table and stool</span>
-        <span>Rp 500.000</span>
-    </div>
-    <div>
-        <img src="grifo" alt="grifo">
-        <h3>Grifo</h3>
-        <span>Night lamp</span>
-        <span>1.500.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="muggo" alt="muggo">
-        <span>Small mug</span>
-        <span>Rp 150.000</span>
-    </div>
-    <div>
-        <span>-50%</span>
-        <img src="pingky" alt="pingky">
-        <h3>Pingky</h3>
-        <span>Cute bed set</span>
-        <span>Rp 7.000.000</span><span>Rp 14.000.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="potty" alt="potty">
-        <h3>Potty</h3>
-        <span>Minimalist flower pot</span>
-        <span>Rp 500.000</span>
-    </div>
+
+
+
+
     <div>
         <div>
             <span>High Quality</span>
