--- a/cart.html
+++ b/cart.html
@@ -19,6 +19,7 @@
     <div>
         <img src="background-shop" alt="">
         <div>
+            <img src="furniro-logo" alt="">
             <span>Cart</span>
             <a href="index.html">Home</a> > <span>Shop</span>
         </div>
