--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
         <div>
             <img src="furniro-logo" alt="">
             <span>Cart</span>
-            <a href="index.html">Home</a> > <span>Shop</span>
+            <a href="index.html">Home</a> > <span>Cart</span>
         </div>
     </div>
     <div>
@@ -94,7 +94,9 @@
         </div>
         <div>
             <span>Newsletter</span>
-            <form action=""></form>
+            <form action="">
+                <input type="text">
+            </form>
             <button type="submit">SUBSCRIBE</button>
         </div>
     </div>
