--- a/contact.html
+++ b/contact.html
@@ -19,78 +19,64 @@
     <div>
         <img src="background-shop" alt="">
         <div>
-            <span>Shop</span>
-            <a href="index.html">Home</a> > <span>Shop</span>
+            <img src="furniro-logo" alt="">
+            <span>Cart</span>
+            <a href="index.html">Home</a> > <span>Contact</span>
         </div>
     </div>
     <div>
+        <h1>Get In Touch With Us</h1>
+        <p>For More Information About Our Product & Services. Please Feel Free To Drop Us An Email. \<br>
+            Our Staff Always Be There To Help You Out. Do Not Hesitate!</p>
+
+    </div>
+
+    <div>
         <div>
-            <span>Showing 1-8 of 24 results</span>
+            <div>
+                <h3>Address</h3>
+                <span>236 5th SE Avenue, New York NY10000, United States</span>
+            </div>
+            <div>
+                <h3>Phone</h3>
+                <p>Mobile: +(84) 546-6789 <br>
+                    Hotline: +(84) 456-6789</p>
+            </div>
+            <div>
+                <h3>Working Time</h3>
+                <p>Monday-Friday: 9:00 - 22:00 <br>
+                    Saturday-Sunday: 9:00 - 21:00</p>
+            </div>
         </div>
         <div>
             <div>
-                <span>Show</span>
-                <Button>8</Button>
+                <span>Your name</span>
+                <form action="">
+                    <input type="text">
+                </form>
             </div>
             <div>
-                <span>Sort By</span>
-                <button>Relevance</button>
+                <span>Email address</span>
+                <form action="">
+                    <input type="text" name="" id="">
+                </form>
+            </div>
+            <div>
+                <span>Subject</span>
+                <form action="">
+                    <input type="text" name="" id="">
+                </form>
+            </div>
+            <div>
+                <span>Message</span>
+                <form action="">
+                    <input type="text" name="" id="">
+                </form>
             </div>
         </div>
+        <button type="submit">SUBMIT</button>
     </div>
-    <div>
-        <span>-30%</span>
-        <img src="syltherine" alt="syltherine">
-        <h3>Syltherine</h3>
-        <span>Stylish cafe chair</span>
-        <span>Rp 2.500.000 </span> <span>Rp 3.500.000</span>
-    </div>
-    <div>
-        <img src="Leviosa" alt="Leviosa">
-        <h3>Leviosa</h3>
-        <span>Stylish cafe chair</span>
-        <span>Rp 2.500.000</span>
-    </div>
-    <div>
-        <span>-50%</span>
-        <img src="lolito" alt="lolito">
-        <h3>Lolito</h3>
-        <span>Luxury big sofa</span>
-        <span>Rp 7.000.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="respira" alt="respira">
-        <h3>Respira</h3>
-        <span>Outdoor bar table and stool</span>
-        <span>Rp 500.000</span>
-    </div>
-    <div>
-        <img src="grifo" alt="grifo">
-        <h3>Grifo</h3>
-        <span>Night lamp</span>
-        <span>1.500.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="muggo" alt="muggo">
-        <span>Small mug</span>
-        <span>Rp 150.000</span>
-    </div>
-    <div>
-        <span>-50%</span>
-        <img src="pingky" alt="pingky">
-        <h3>Pingky</h3>
-        <span>Cute bed set</span>
-        <span>Rp 7.000.000</span><span>Rp 14.000.000</span>
-    </div>
-    <div>
-        <span>New</span>
-        <img src="potty" alt="potty">
-        <h3>Potty</h3>
-        <span>Minimalist flower pot</span>
-        <span>Rp 500.000</span>
-    </div>
+
     <div>
         <div>
             <span>High Quality</span>
@@ -137,9 +123,7 @@
         </div>
         <div>
             <span>Newsletter</span>
-            <form action="">
-                <input type="text">
-            </form>
+            <form action=""></form>
             <button type="submit">SUBSCRIBE</button>
         </div>
     </div>
