--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
         </div>
         <div>
             <span>Newsletter</span>
-            <form action=""></form>
+            <form action="">
+                <input type="text">
+            </form>
             <button type="submit">SUBSCRIBE</button>
         </div>
     </div>
