--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <img src="Furniro Logo" alt="Furniro">
         <h1>Furniro</h1>
         <ul>
-            <li>Home</li>
-            <li>Shop</li>
+            <li><a href="index.html"></a>Home</li>
+            <li><a href="shop.html"></a>Shop</li>
             <li>About</li>
-            <li>Contact</li>
+            <li><a href="contact.html"></a>Contact</li>
         </ul>
     </div>
     <div>
